<resources>
    <string name="app_name">MultiRoom Localization</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="local_service_stopped">SLAC stopped</string>
    <string name="local_service_started">SLAC started</string>
    <string name="local_service_label">SLAC</string>
    <string name="scan">SCAN</string>
    <string name="done">Done</string>
    <string name="default_device_name">UNKNOWN</string>
    <string name="paired_devices">Paired devices</string>
    <string name="choose_room">choose room</string>
    <string name="discovered_devices">Discovered Devices</string>
    <string name="playmusic">play</string>
    <string name="assignspeaker_room">Assign only 1 speaker for each room</string>
    <string name="choose_device">choose device</string>
    <string name="dialog_request_connection_bt"> Dispositivo Bluetooth non trovato intorno a te (alcuni dispositivi possono non essere discoverable), vuoi provare a connettere ugualmente?</string>
    <string name="dialog_conferma">Conferma</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="addReferencePointpopup">Adesso che hai caricato la tua mappa seleziona tutte le stanze della casa e aggiungi il nome con cui indicarla</string>
    <string name="addReferencePointpopupSecond">Quando hai aggiunto tutte le stanze conferma attraverso il bottone in basso a destra</string>

    <string name="trainingText"> Ora bisogna misurare le stanze della casa, spostati nella stanza indicata, premi start e cammina all\'interno della stanza fino alla fine del timer. Una volta completato premi sul tasto next per cambiare stanza.  </string>
    <string name="registrationDone">Registrazione completata \n procedi con il login  </string>
    <string name="setPasswordMap">Ultimo passaggio \n inserisci un nome ed una password per la mappa appena creata </string>
    <string name="settings"> Abbiamo quasi finito \n Associa per ogni stanza uno speaker e scegli se attivare la DoNotDisturb mode </string>
    <string name="noMap"> Nessuna mappa associata a questo account, creane una nuova o registrati ad una già esistente </string>
    <string name="suggestionSettings"> Per una migliore esperienza dell\'app disabilita l\'impostazione \"Wifi Scan Throttling\" \n <a href="https://dannyda.com/2023/02/10/how-to-remove-android-wifi-scan-throttling/">LINK</a></string>
    <string name="dnd"> Per poter utilizzare la DnD attiva l\'impostazione cliccando qui </string>
    <string name="playlist">Playlist</string>




</resources>