<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_live_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityLive">

    <ImageView
        android:id="@+id/mapView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|center_vertical"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/settingsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|end"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:src="@android:drawable/ic_menu_preferences" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:background="@color/cardview_light_background">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:layout_alignParentEnd="true"
            android:id="@+id/closePlaylistButton"
            android:src="@android:drawable/ic_menu_close_clear_cancel"
            tools:ignore="ContentDescription" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/time_control"
            android:layout_below="@id/closePlaylistButton"
            android:orientation="horizontal">
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <SeekBar
                    android:id="@+id/seekBar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_weight="1"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/audio_time"
                    android:layout_gravity="right"
                    android:paddingRight="5dp"
                    android:text="00:00"/>
            </TableRow>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/controller_buttons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/time_control"
            android:layout_centerHorizontal="true">

            <ImageButton
                android:id="@+id/previoustrack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@android:drawable/ic_media_previous"
                tools:ignore="ImageContrastCheck"
                android:contentDescription="@string/previous" />

            <ImageButton
                android:id="@+id/playpause"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/playmusic"
                android:src="@android:drawable/ic_media_play" />

            <ImageButton
                android:id="@+id/nexttrack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@android:drawable/ic_media_next"
                android:contentDescription="@string/next" />
            <ImageButton
                android:id="@+id/openplaylist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_media_playlist"

                android:contentDescription="@string/playlist" />
        </LinearLayout>
        <ListView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/playlist_view"
            tools:listitem="@layout/list_tracks_layout"
            android:layout_below="@id/controller_buttons"
            android:visibility="gone"/>
    </RelativeLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>